# BloomFilterTrie

./: .gitignore  CMakeLists.txt  README.md
include/: CC.h  CMakeLists.txt  Node.h  UC.h  annotation.h  compression.h
src/: CC.c  CMakeLists.txt  UC.c  annotation.c  bft.c  branchingNode.c  compression.c  extract_kmers.c  file_io.c  insertNode.c  intersection.c  list.c  main.c  marking.c  merge.c  presenceNode.c  printMemory.c  quicksort.c  replaceAnnotation.c  retrieveAnnotation.c  snippets.c  write_to_disk.c  xxhsum.c
